Fixed dashboard spacing / sizing

--- a/ClaraFrontend/src/app/components/dashboards/dashboard/dashboard.component.scss
+++ b/ClaraFrontend/src/app/components/dashboards/dashboard/dashboard.component.scss
@@ -35,19 +35,19 @@
 }
 
 .main-chart {
-  margin: 40px 80px;
   background-color: white;
   padding: 20px;
+  width: 65%;
+  margin: 50px auto;
   border-radius: 5px;
   box-shadow: $main-box-shadow;
 }
 
 ul {
   display: flex;
-  width: 90%;
-  margin: auto;
-  margin: 20px auto;
   padding: 0;
+  width: 95%;
+  margin: auto;
   list-style-type: none;
   justify-content: space-around;
   align-content: space-around;
@@ -58,7 +58,7 @@ li {
   width: auto;
   height: auto;
   margin: auto;
-  margin-top: 3%;
+  margin-bottom: 3%;
   padding: 20px;
   background-color: white;
   border-radius: 5px;
