--- a/ClaraFrontend/src/app/components/dashboards/dashboards-main/dashboards-main.component.scss
+++ b/ClaraFrontend/src/app/components/dashboards/dashboards-main/dashboards-main.component.scss
@@ -128,10 +128,10 @@ li:hover:not(.active) a {
 
 
 .main-content {
-  margin-left: 15%;
+  margin-left: 17%;
   text-align: center;
   height: 100%;
-  width: 85%;
+  width: 83%;
 }
 
 .main-content>* {
